<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_manage"
        android:icon="@drawable/ic_settings"
        android:title="@string/homepage_module_manage"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_switch_layout"
        android:title="@string/homepage_switch_layout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_preload"
        android:checkable="true"
        android:title="@string/homepage_preload"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="never" />

</menu>
