<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingTop="10dp"
    android:paddingEnd="8dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/iv_drag"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/homepage_drag_sort"
        android:padding="4dp"
        android:src="@drawable/ic_drag_handle"
        app:tint="@color/secondaryText" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            tools:text="集名称" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/secondaryText"
            android:textSize="11sp"
            tools:text="3 个模块" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/homepage_rename_set"
        android:padding="4dp"
        android:src="@drawable/ic_edit"
        app:tint="@color/secondaryText" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/homepage_delete_set"
        android:padding="4dp"
        android:src="@drawable/ic_outline_delete"
        app:tint="@color/secondaryText" />

    <Switch
        android:id="@+id/sw_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/homepage_module_manage" />

</LinearLayout>
